--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,10 @@
   "useTabs": false,
   "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 80
+  "printWidth": 80,
+  "svelteSortOrder": "options-styles-markup-scripts",
+  "svelteAllowShorthand": true,
+  "svelteBracketNewLine": true,
+  "svelteIndentScriptAndStyle": false,
+  "plugins": ["prettier-plugin-svelte"]
 }
