--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "typescript": "^4.0.0",
     "vite": "^2.2.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-i18n": "^3.3.9",
+    "swiper": "^6.5.9"
+  }
 }
