--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next-i18next": "^8.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swiper": "^6.6.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
