--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "hizirtransfer",
+  "name": "hizirtransfer-migrate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write ."
+    "start": "next start"
   },
   "dependencies": {
-    "next": "10.2.0",
-    "next-i18next": "^8.2.0",
-    "prop-types": "^15.7.2",
+    "next": "10.2.3",
+    "next-i18next": "^8.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-youtube-lite": "^1.0.1"
+    "react-youtube-lite": "^1.0.1",
+    "windicss": "^3.1.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
-    "eslint": "^7.26.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.0",
-    "windicss": "^3.0.6",
-    "windicss-webpack-plugin": "^0.5.3"
+    "windicss-webpack-plugin": "^1.0.0"
   }
 }
