--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hizirtransfer-migrate",
+  "name": "hizirtransfer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.2.3",
+    "next": "11",
     "next-i18next": "^8.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
