--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "5.5.0",
+    "autoprefixer": "^10.2.6",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "^11.0.0",
@@ -25,6 +26,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.3.4",
+    "tailwindcss": "^2.1.4",
     "windicss-webpack-plugin": "^1.0.0"
   }
 }
