--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next-i18next": "^8.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-youtube-lite": "^1.0.1",
-    "windicss": "^3.1.3"
+    "react-youtube-lite": "^1.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "5.5.0",
@@ -27,7 +26,6 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.3.4",
-    "tailwindcss": "^2.1.4",
-    "windicss-webpack-plugin": "^1.0.0"
+    "tailwindcss": "^2.1.4"
   }
 }
