--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "11",
     "next-i18next": "^8.5.0",
     "react": "17.0.2",
+    "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
     "react-youtube-lite": "^1.0.1"
   },
