--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "11",
     "next-i18next": "^8.5.0",
+    "nodemailer": "^6.6.2",
     "react": "17.0.2",
     "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
