--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "i18next-hmr": "^1.7.4",
+    "i18next-http-backend": "^1.2.6",
     "postcss": "^8.3.4",
     "tailwindcss": "^2.1.4"
   }
